# mfs-rust

./: .gitignore  Cargo.toml  README.md
.opencode/agent/: code-review-writer.md
client/: Cargo.toml
client/src/: connection.rs  input.rs  main.rs  minimap.rs  player.rs  resources.rs  setup.rs  ui.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: Audit.md  NOTES.md  Project.md
lib/: Cargo.toml
lib/src/: lib.rs  protocol.rs
server/: Cargo.toml
server/src/: main.rs
src/: maze.rs
